# aln

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md  aln.pc.in  aln_8h.html  aln_8h_source.html  annotated.html  classes.html  dir_2a05f25c069d808f7ace6146417831f3.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_c29eeb5af533606caea8a09e66794740.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_e68e8157741866f444e17edd764ebbae.html  doxygen_crawl.html  files.html  globals.html  globals_func.html  globals_type.html  index.html  struct__ALN-members.html  struct__ALN.html
.github/workflows/: ci.yaml
doc/: mainpage.dox
fedora/39/: aln-0.1.0-1.fc39.src.rpm  aln-0.1.0-1.fc39.x86_64.rpm  aln-0.1.1-1.fc39.src.rpm  aln-0.1.1-1.fc39.x86_64.rpm  aln-debuginfo-0.1.0-1.fc39.x86_64.rpm  aln-debuginfo-0.1.1-1.fc39.x86_64.rpm  aln-debugsource-0.1.0-1.fc39.x86_64.rpm  aln-debugsource-0.1.1-1.fc39.x86_64.rpm  aln-devel-0.1.0-1.fc39.x86_64.rpm  aln-devel-0.1.1-1.fc39.x86_64.rpm  aln-libs-0.1.0-1.fc39.x86_64.rpm  aln-libs-0.1.1-1.fc39.x86_64.rpm  aln-libs-debuginfo-0.1.0-1.fc39.x86_64.rpm  aln-libs-debuginfo-0.1.1-1.fc39.x86_64.rpm
fedora/40/: aln-0.1.0-1.fc40.src.rpm  aln-0.1.0-1.fc40.x86_64.rpm  aln-0.1.1-1.fc40.src.rpm  aln-0.1.1-1.fc40.x86_64.rpm  aln-debuginfo-0.1.0-1.fc40.x86_64.rpm  aln-debuginfo-0.1.1-1.fc40.x86_64.rpm  aln-devel-0.1.0-1.fc40.x86_64.rpm  (+7 more)
include/: aln.h
packaging/: aln.spec
repo/: aln-0.1.0-1.fc40.src.rpm  aln-0.1.0-1.fc40.x86_64.rpm  aln-debuginfo-0.1.0-1.fc40.x86_64.rpm  aln-debugsource-0.1.0-1.fc40.x86_64.rpm  aln-devel-0.1.0-1.fc40.x86_64.rpm  aln-libs-0.1.0-1.fc40.x86_64.rpm  aln-libs-debuginfo-0.1.0-1.fc40.x86_64.rpm
search/: all_1.js  all_4.js  all_5.js  classes_0.js  files_0.js  functions_0.js  pages_0.js  pages_1.js  searchdata.js  typedefs_0.js
src/: CMakeLists.txt  aln.c
tests/: CMakeLists.txt  test_default.c
tool/: CMakeLists.txt  aln.1  main.c
(+258 files in other folders)
